WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
298618
REGRESSION(
296209@main
): Crash in `removeScreenTimeData`
https://bugs.webkit.org/show_bug.cgi?id=298618
Summary
REGRESSION(296209@main): Crash in `removeScreenTimeData`
Charlie Wolfe
Reported
2025-09-09 14:16:19 PDT
Crash data indicates that a null string may be passed to NSSet:addObject:, which causes an exception to be thrown.
Attachments
Add attachment
proposed patch, testcase, etc.
Charlie Wolfe
Comment 1
2025-09-09 14:17:34 PDT
rdar://160230406
Charlie Wolfe
Comment 2
2025-09-09 14:18:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50508
EWS
Comment 3
2025-09-09 16:28:41 PDT
Committed
299779@main
(d16626cfd264): <
https://commits.webkit.org/299779@main
> Reviewed commits have been landed. Closing PR #50508 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug