REGRESSION(296209@main): Crash in `removeScreenTimeData` https://bugs.webkit.org/show_bug.cgi?id=298618 rdar://160230406

Reviewed by Aditya Keerthi.

Crash data indicates that a null string may be passed to NSSet:addObject:, which causes an exception to
be thrown. Add a null check before calling addObject.

* Source/WebKit/UIProcess/WebsiteData/Cocoa/ScreenTimeWebsiteDataSupport.mm:
(WebKit::ScreenTimeWebsiteDataSupport::removeScreenTimeData):

Canonical link: https://commits.webkit.org/299779@main